--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,8 @@ calibrated-simulation-job:
   stage: calibration
   script:
     - cd build
+    - cat ../results/$CALIBRATION_CONFIG_PATH/calibration_config.yaml
+    - cat ../results/$CALIBRATION_DATASET_PATH/$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT
     - ./storalloc-wrench ../results/$CALIBRATION_CONFIG_PATH/calibration_config.yaml ../results/$CALIBRATION_DATASET_PATH/$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT calibration
     - ls -lah build
     - mv build/simulatedJobs_* ./calibrated_simulatedJobs_$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT
@@ -164,6 +166,7 @@ calibrated-simulation-job:
     - simulation
   dependencies:
     - calibration-job
+    - build-job
   artifacts:
     name: "$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA-calibrated_trace"
     paths:
