--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -147,7 +147,6 @@ calibration-job:
     - simulation
   dependencies:
     - build-job
-    - functional-test-job
   artifacts:
     name: "$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA-calibrated_config"
     paths:
@@ -161,7 +160,9 @@ calibrated-simulation-job:
     - cd build
     - cat ../results/$CALIBRATION_CONFIG_PATH/calibration_config.yaml
     - cat ../results/$CALIBRATION_DATASET_PATH/$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT
-    - ./storalloc-wrench ../results/$CALIBRATION_CONFIG_PATH/calibration_config.yaml ../results/$CALIBRATION_DATASET_PATH/$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT calibration
+    - pwd
+    - ls -lah build
+    - ./storalloc_wrench ../results/$CALIBRATION_CONFIG_PATH/calibration_config.yaml ../results/$CALIBRATION_DATASET_PATH/$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT calibration
     - ls -lah build
     - mv build/simulatedJobs_* ./calibrated_simulatedJobs_$CALIBRATION_DATASET$CALIBRATION_DATASET_EXT
   tags:
