make -j instead of make -j 4 crashed the build sometimes on the storalloc-[1|2] workers. Reverting

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,8 +91,8 @@ build-job:
     - mkdir build
     - cd build
     - cmake ..
-    - make -j
-    - make -j unit_tests
+    - make -j 4
+    - make -j 4 unit_tests
   tags:
     - build
   artifacts:
