Starting to use buffered simple storage services again ; Huge configuration refactoring, now including the IO buffer size for simple storage services as a parameters (and a few other new parameters) ; fixing tests (ONE BUG REMAINING, REQUIRES INVESTIGATION LATER ; Adding Constants.h in an effort to reduce string duplicates throughout the code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SOURCE_FILES
         include/JobDefinition.h
         include/ConfigDefinition.h
         include/Utils.h
+        include/Constants.h
         src/Controller.cpp
         src/Simulator.cpp
         src/Platform.cpp
