--- a/configs/test_configs/lustre_config_base.yml
+++ b/configs/test_configs/lustre_config_base.yml
@@ -54,6 +54,7 @@ permanent_storage:
   read_path: read/
   write_path: write/
   disk_id: perm_disk0
+  io_buffer_size: 1GB
 dragonfly:          # See https://simgrid.org/doc/latest/Platform_examples.html - Dragonfly
   groups: 2        # Entire Dragonfly zone (should be 4392 nodes in total, we use slightly more)
   group_links: 2
@@ -64,7 +65,8 @@ dragonfly:          # See https://simgrid.org/doc/latest/Platform_examples.html 
   nodes: 2          # Per router
   core_count: 64    # Compute node core count - unused
   ram: 192          # GB Compute node ram
-  flops: 2.2TF      # Flops for each compute node
+  flops: 2.2Tf      # Flops for each compute node
+  max_compute_nodes: 4392
   node_local_storage:
     enabled: no     # Not implemented yet anyway
     nb_disks: 1
