--- a/results/exp_configurations/theta_config.yml
+++ b/results/exp_configurations/theta_config.yml
@@ -10,33 +10,33 @@ general:
   config_name: StorAlloc_Theta_Lustre_fs0
   config_version: 0.0.1
   max_stripe_size: 100048576          # Max size for allocation stripes (in bytes) (when striping is done at CSS level, so not used here)
-  preload_percent: 0.0
-  amdahl: 0.7                         # From 0 to 1, degree of // in compute tasks
+  preload_percent: 0.3
+  amdahl: 0.5                         # From 0 to 1, degree of // in compute tasks
   walltime_extension: 1.0             # The final walltime passed to the batch sched will be walltime * walltime_extension
 network:
   bandwidth_backbone: 9TBps
-  bandwidth_backbone_storage: 240GBps
-  bandwidth_backbone_perm_storage: 90GBps
+  bandwidth_backbone_storage: 200GBps     # 240Gbps theoretical
+  bandwidth_backbone_perm_storage: 80GBps # 90Gbps theoretical
   bandwidth_backbone_ctrl: 12.5GBps
   link_latency: 24us
 storage:
-  read_variability: 1.0             # read AND write set to 1.0 to deactivate
+  read_variability: 1.0               # read AND write set to 1.0 to deactivate
   write_variability: 1.0
-  non_linear_coef_read: 0.5         # read AND write set to 1.0 to deactivate
-  non_linear_coef_write: 0.5
+  non_linear_coef_read: 0.85          # read AND write set to 1.0 to deactivate
+  non_linear_coef_write: 0.75
   nb_files_per_read: 2
   nb_files_per_write: 2
   io_read_node_ratio: 0.1
-  max_read_node_cnt: 20
+  max_read_node_cnt: 10
   io_write_node_ratio: 0.1
-  max_write_node_cnt: 20
-  io_buffer_size: 1GB
+  max_write_node_cnt: 10
+  io_buffer_size: 536870912B
   disk_templates:
     - &raid_OSS
       id: raid_OSS
       capacity: 164000    # GB (~ 164 TB, obtained from 9.2PB total capacity / 56 OSS  - 1 OST per OSS)
-      read_bw: 6000    # MBps   6GBps peak performance (https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf)
-      write_bw: 3000    # MBps   randomly half of read bw
+      read_bw: 2500       # MBps   theoretical 6GBps peak performance (https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf)
+      write_bw: 1400      # MBps 
       mount_prefix: /dev/hdd
   node_templates:
     - &node_capa
@@ -48,13 +48,14 @@ storage:
     - quantity: 56
       template: *node_capa
 permanent_storage:
-  read_bw: 90GBps   # ALCF Tape archive cache speed is 90Gbps / and also the link between HDR and FDR is 100GBps. Here we reduce the link speed
-  write_bw: 90GBps  # Same
+  read_bw: 20GBps   # ALCF Tape archive cache speed is 90Gbps / and also the link between HDR and FDR is 100GBps
+  write_bw: 10GBps  # Same
   capacity: 3050TB  # Tape capacity is 305 PB
   mount_prefix: /dev/disk0
   read_path: read/
   write_path: write/
   disk_id: perm_disk0
+  io_buffer_size: 536870912B
 dragonfly:          # See https://simgrid.org/doc/latest/Platform_examples.html - Dragonfly
   groups: 12        # Entire Dragonfly zone (should be 4392 nodes in total, we use slightly more)
   group_links: 1
@@ -65,7 +66,8 @@ dragonfly:          # See https://simgrid.org/doc/latest/Platform_examples.html 
   nodes: 4          # Per router
   core_count: 64    # Compute node core count - unused
   ram: 192          # GB Compute node ram
-  flops: 2.2TF      # Flops for each compute node
+  flops: 2Tf      # Flops for each compute node
+  max_compute_nodes: 4392
   node_local_storage:
     enabled: no     # Not implemented yet anyway
     nb_disks: 1
@@ -76,9 +78,9 @@ allocator: lustre
 lustre:
   lq_threshold_rr: 43     # lustre default
   lq_prio_free: 232       # lustre default
-  stripe_size: 2097152    # Default size of each read / write before switching to another stripe on a different OST (from https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshopq_May2022_IOopt_mcpheeters.pdf)
-  stripe_count: 8         # Default number of OSTs used for each IO operation
-  max_chunks_per_ost: 8   # Maximum number of file parts / allocation chunks on each OSTs (not a Lustre parameter, but used to speed up simulation at the cost of precision)
+  stripe_size: 268435456  # Default size of each read / write before switching to another stripe on a different OST (from https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshopq_May2022_IOopt_mcpheeters.pdf)
+  stripe_count: 4         # Default number of OSTs used for each IO operation
+  max_chunks_per_ost: 12  # Maximum number of file parts / allocation chunks on each OSTs (not a Lustre parameter, but used to speed up simulation at the cost of precision)
 outputs:
   job_filename_prefix: simulatedJobs_
   io_actions_prefix: io_actions_ts_
