--- a/results/exp_configurations/theta_config.yml
+++ b/results/exp_configurations/theta_config.yml
@@ -31,6 +31,8 @@ storage:
   io_write_node_ratio: 0.1
   max_write_node_cnt: 10
   io_buffer_size: 268435456B
+  read_bytes_preload_thres: 100000000
+  write_bytes_copy_thres:  2000000000
   disk_templates:
     - &raid_OSS
       id: raid_OSS
