Adding cleanup/copy action triggers and fixing configs with the new associated parameters ; now using cpu_cores - 2 (instead of -1) for parallel calibrations.

--- a/configs/test_configs/rr_config.yml
+++ b/configs/test_configs/rr_config.yml
@@ -26,6 +26,7 @@ storage:
   io_buffer_size: 1GB
   read_bytes_preload_thres: 100000000
   write_bytes_copy_thres:  2000000000
+  cleanup_threshold: 0.0
   disk_templates:
     - &hdd_capa
       id: hdd_capa
