--- a/configs/test_configs/lustre_config_3OSS_3OST.yml
+++ b/configs/test_configs/lustre_config_3OSS_3OST.yml
@@ -33,6 +33,7 @@ storage:
   io_buffer_size: 1GB
   read_bytes_preload_thres: 100000000
   write_bytes_copy_thres:  2000000000
+  cleanup_threshold: 0.0
   disk_templates:
     - &raid_OSS
       id: raid_OSS
