--- a/results/exp_configurations/theta_config.yml
+++ b/results/exp_configurations/theta_config.yml
@@ -33,6 +33,7 @@ storage:
   io_buffer_size: 268435456B
   read_bytes_preload_thres: 100000000
   write_bytes_copy_thres:  2000000000
+  cleanup_threshold: 0.5
   disk_templates:
     - &raid_OSS
       id: raid_OSS
